# mambo-k12-ai-robot

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/web/: .env.example  README.md  package.json  vitest.config.ts
deploy/: device-agent.env.example  install-orangepi-browser.sh  launch-robot-browser.sh  launch-robot-webkit.py  local-web-proxy.py  mambo-device-agent.service
device/: __init__.py  agent.py  commands.py
device/hardware/: __init__.py  camera.py  capabilities.py  display.py  media.py  mouse.py  process.py
device/tests/: test_agent_commands.py  test_camera.py  test_capabilities.py  test_commands.py  test_display.py  test_media.py  test_mouse.py  test_npu_smoke.py  test_process.py  test_status.py
device/vision/: __init__.py  npu_smoke.py
docs/: architecture.md  product-technical-design.md  protocol.md
docs/deployment/: production.md
docs/evidence/: index.md  p0-fidelity-ledger.md
docs/handoff/: functional-handoff.md
docs/report/: demo-script.md  project-report.md
docs/verification/: 2026-07-18-functional-closure.md  2026-07-18-orangepi-browser-acceptance.md  2026-07-18-p0-results.md  2026-07-18-robot-voice-gesture.md  handpose-x-model-evaluation.md  p0-release-checklist.md
scripts/: start-server.ps1  start-server.sh  verify-device-loop.ps1  verify-npu-smoke.ps1  verify-xtest.py
server/: Dockerfile  __init__.py  entrypoint.sh  requirements.txt
server/app/: auth.py  config.py  database.py  main.py  manager.py  (+4 more)
(+183 files in other folders)
